design map page

--- a/html/friendly-layout/index.html
+++ b/html/friendly-layout/index.html
@@ -694,10 +694,21 @@
                         <use href="../../assets/svg/_sprite.svg#Scan"> </use>
                       </svg></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="map.html"><span> 
+                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Location"> </use>
                       </svg></span></a>
+                  <div class="submenu-wrapper">
+                    <h4 class="flex items-center gap-2 text-sm font-semibold mb-3">
+                      <svg class="w-[20px] h-[20px]"> 
+                        <use href="../../assets/svg/_sprite.svg#Location"> </use>
+                      </svg>Map
+                    </h4>
+                    <ul class="sidebar-submenu">
+                      <li> <a href="./maps-js.html">Maps Js</a></li>
+                      <li> <a href="./data-map.html">Data Map</a></li>
+                    </ul>
+                  </div>
                 </li>
               </ul>
             </nav>
