--- a/html/material-layout/index.html
+++ b/html/material-layout/index.html
@@ -1100,10 +1100,17 @@
                       <use href="../../assets/svg/_sprite.svg#Scan"> </use>
                     </svg><span>Knowledgebase</span></span></a>
               </li>
-              <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="map.html"><span> 
+              <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Location"> </use>
-                    </svg><span>Map</span></span></a>
+                    </svg><span>Map</span></span>
+                  <svg> 
+                    <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
+                  </svg></a>
+                <ul class="sidebar-submenu">
+                  <li> <a href="./maps-js.html">Maps Js</a></li>
+                  <li> <a href="./data-map.html">Data Map</a></li>
+                </ul>
               </li>
             </ul>
           </nav>
