--- a/html/unique/knowledgebase.html
+++ b/html/unique/knowledgebase.html
@@ -1104,10 +1104,17 @@
                         <use href="../../assets/svg/_sprite.svg#Scan"> </use>
                       </svg><span>Knowledgebase</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="map.html"><span> 
+                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Location"> </use>
-                      </svg><span>Map</span></span></a>
+                      </svg><span>Map</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./maps-js.html">Maps Js</a></li>
+                    <li> <a href="./data-map.html">Data Map</a></li>
+                  </ul>
                 </li>
               </ul>
             </nav>
@@ -1133,7 +1140,7 @@
             </div>
           </div>
           <div class="grid grid-cols-12 gap-card-gap mt-6">
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/3dwomen.png" alt="3D women"></div>
@@ -1146,7 +1153,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Yen and 242 Others  </span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1168,7 +1175,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/appdev.jpg" alt="appdev"></div>
@@ -1181,7 +1188,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Wilt and 126 Others  </span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1203,7 +1210,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/news.jpg" alt="news"></div>
@@ -1216,7 +1223,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bran and 186 Others  </span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1238,7 +1245,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/3dlaptops.png" alt="3D laptops"></div>
@@ -1251,7 +1258,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Dou and 96 Others  </span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1273,7 +1280,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/money-hand.png" alt="money"></div>
@@ -1286,7 +1293,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bets and 154 Others </span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1308,7 +1315,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/3dboy.jpg" alt="3D boy"></div>
@@ -1321,7 +1328,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Robed and 198 Others </span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1343,7 +1350,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/time-management.png" alt="time management"></div>
@@ -1356,7 +1363,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Virga and 126 Others </span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1378,7 +1385,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 xl:col-span-4 lg:col-span-6 sm:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:col-span-6 sm:col-span-12">
               <div class="card p-0">
                 <div class="card-image">
                   <div class="flex justify-center items-center"><img class="w-full min-h-full h-[250px] object-contain" src="../../assets/images/knowledgebase/pound-boy.jpg" alt="pound boy"></div>
@@ -1391,7 +1398,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Brent and 126 Others</span></a>
-                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2">
                         <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1503,10 +1510,6 @@
   <script src="../../assets/js/feather-custom.js"></script>
   <!-- Select Js -->
   <script src="../../assets/js/custom-select.js"></script>
-  <!-- Apex Chart Js -->
-  <script src="../../assets/js/apexchart/apexcharts.js"></script>
-  <script src="../../assets/js/apexchart/apex-common.js"></script>
-  <script src="../../assets/js/apexchart/unique-custom.js"></script>
   <!-- Sidebar Js -->
   <script src="../../assets/js/sidebar.js"></script>
   <!-- customizer js-->
