--- a/html/unique/wishlist.html
+++ b/html/unique/wishlist.html
@@ -1108,10 +1108,17 @@
                         <use href="../../assets/svg/_sprite.svg#Scan"> </use>
                       </svg><span>Knowledgebase</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="map.html"><span> 
+                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Location"> </use>
-                      </svg><span>Map</span></span></a>
+                      </svg><span>Map</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./maps-js.html">Maps Js</a></li>
+                    <li> <a href="./data-map.html">Data Map</a></li>
+                  </ul>
                 </li>
               </ul>
             </nav>
@@ -1274,12 +1281,12 @@
               </div>
             </div>
           </div>
-          <!-- Page Body End  -->
-          <div class="page-footer sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
-            <p class="text-xs font-semibold text-center text-content">Copyright 2023 © Govo theme by pixelstrap</p>
-            <div class="flex items-center gap-2"> 
-              <p class="text-xs font-semibold text-center text-content">Hand crafted & made with</p><i class="stroke-danger h-[18px] w-[18px] fill-danger" data-feather="heart"></i>
-            </div>
+        </div>
+        <!-- Page Body End  -->
+        <div class="page-footer sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
+          <p class="text-xs font-semibold text-center text-content">Copyright 2023 © Govo theme by pixelstrap</p>
+          <div class="flex items-center gap-2"> 
+            <p class="text-xs font-semibold text-center text-content">Hand crafted & made with</p><i class="stroke-danger h-[18px] w-[18px] fill-danger" data-feather="heart"></i>
           </div>
         </div>
       </div>
